- Update relink image to process all images.
- Add free space validation for backup image.
- Fix isMissing flag for redlinked chapter.
- Fix update service for external chapter.
- Fix refresh for external chapter.
- Update jSoup to 1.7.3
- Add DisplayChangelogActivity (yaminorito).
- Update image path check logic (yaminorito).
- Add Mark Unread Entire Volume context menu (yaminorito).

1.1.11:
- Add volume indicator in bookmark.
- Add Back to Chapter List in Jump List.
- Update parser to include redlink page in Chapter List (marked as missing page).
- Update UI for main: add button states.
- Fix Alt. Novel listing bug.
- Add thumbnails image backup and restore.
- Add thumbnails image relinker.
- Update UI Translations.
- Add option to order bookmarks by Creation Date.
- Fix Settings menu in Bookmark activity.
- Add option to Auto Download updated chapter from service.

1.1.10:
- Add Text-to-speech feature.
- Show big image if novel cover is clicked.
- Fix last position bug.
- Replace Progress Dialog with inline Progress Bar.
- Enable Display Zoom Option for older android.
- Add Toast message if unable to open DB.
- Fix Update service FC (1.1.10b)

1.1.9:
- Update parser to handle empty string exception.
- Update getImage to handle http or https.
- Add option to hide empty volume.
- Fix custom image path resolution.

1.1.8:
- Add option to use HTTPS for conneting to Baka-Tsuki.
- Add option to disable agrressive book title cleanup (e.g. Nekomonogatari).
- Add option to change the path for image storage.
  Note: The old images is not moved/removed. You can use file manager to do this, and you need to refresh the chapter again to get the correct image path. (1.1.8c)
- Update UI translation.
- Fix crash if using Tablet UI (1.1.8b)
- Fix crash when adding item to download list (1.1.8b)

1.1.7
- Add option to change the retry and timeout.
- Add option to auto increase the time out when retrying.
- Fix crash when opening Settings.
- Update UI translations.

1.1.6