@@ -11,6 +11,8 @@
 - Add DisplayChangelogActivity (yaminorito).
 - Update image path check logic (yaminorito).
 - Add Mark Unread Entire Volume context menu (yaminorito).
+- Update Android 4.4/Kitkat text zoom handler (need to be tested).
+- Update read handler to ignore redlink=1 chapter.
 
 1.1.11:
 - Add volume indicator in bookmark.
